[package]
name = "univariate_optimisation"
version = "0.1.0"
authors = ["CGMossa <cgmossa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
serde = "1.0.101"
num = "0.2.0"
#nalgebra = "0.18.1"
#ndarray = "0.13.0"
#nalgebra-glm = "0.4.2"